# Harness-agentic-AI-agent-best-practices-and-use-case

./: .gitignore  CHANGELOG.md  PROJECT_STATE.md  README.md
.github/workflows/: ui-test.yml
agentcore/: agentcore.json  aws-targets.json
agentcore/cdk/: package-lock.json
agentcore/scripts/: VERIFICATION_issue_24.md  VERIFICATION_issue_28.md  attach_memory.py  setup_observability.py
app/demo-frontend/: index.html
app/ui-test-agent/: README.md  a2a_handoff.py  deploy.sh  deploy_harness.py  e2e_pipeline.py  eval_runner.py  harness.json  invoke.py  main.py  pyproject.toml  test_config.json
app/ui-test-agent/memory/: session.py
app/ui-test-agent/skills/ui-testing/: SKILL.md
docs/: ADMIN_PORTAL.md  ARCHITECTURE.md  BEST_PRACTICES.md  BEST_PRACTICES_zh-TW.md  BUG_FIX_AGENT.md  CASE_STUDY.md  CASE_STUDY_zh-TW.md  DESIGN_UI_TEST_AGENT.md  DEVELOPMENT_WORKFLOW.md  PRODUCTION_HARDENING.md  TESTING_THE_AGENT.md  TEST_RESULTS.md  TRIGGERS.md
docs/demo/: index.html
docs/evidence/: bug-fix-agent-output.txt
hooks/: commit-msg  install.sh  post-merge  pre-commit  pre-push
