[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uitestagent"
version = "0.1.0"
description = "AgentCore Runtime Application using Strands SDK"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aws-opentelemetry-distro",
    "bedrock-agentcore[strands-agents] >= 1.9.1",
    "botocore[crt] >= 1.35.0",
    "mcp >= 1.19.0",
    "strands-agents >= 1.13.0",
    "strands-agents-tools >= 0.1.0",
    "playwright",
    "nest-asyncio",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
